--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -54,6 +55,11 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     testImplementation 'junit:junit:4.13.2'
+    implementation'com.google.firebase:firebase-auth-ktx:21.0.6'
+    implementation platform('com.google.firebase:firebase-bom:30.2.0')
+    implementation'com.google.android.gms:play-services-auth:20.2.0'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation'com.google.firebase:firebase-analytics-ktx'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
