--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,15 @@
 buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.13'
+
+    }
+}
+
+buildscript {
     ext {
         compose_version = '1.1.0-beta01'
     }
